move generator dockerfile closer to source

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,9 @@ services:
       - ./traefik.yml:/etc/traefik/traefik.yml
 
   generator:
-    build: .
+    build:
+      context: .
+      dockerfile: service.generator/Dockerfile
     ports:
       - "9000:80"
     labels:
